<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorPhun</string>
    <string name="action_settings">Settings</string>
    <string name="points_text">Points</string>
    <string name="level_text">Level</string>
    <string name="start_button_text">PLAY</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play_game_button_text">Play Game</string>
    <string name="scoreboard_button_text">Scoreboard</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="game_help">Tap the lighter color FAST!</string>
    <string name="game_over">Game Over</string>
    <string name="retry_game">Replay</string>
    <string name="main_menu">Main Menu</string>
    <string name="tagline1">A SIMPLE</string>
    <string name="tagline2">COLOR</string>
    <string name="tagline3">GAME</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="preference_file_key">com.example.prakharsriv.colorphun.PREFERENCES_FILE</string>
    <string name="APP_ID">327910424750</string>
    <string name="LEADERBOARD_ID">CgkIroHwx8UJEAIQAQ</string>
    <string name="highscore">New High Score!</string>
    <string name="best_label">Best</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_help">Please sign in to earn achievements and participate in global leaderboards</string>
    <string name="signin_help_title">Sign In</string>
    <string name="ACHIEVEMENT_NOVICE_ID">CgkIroHwx8UJEAIQAg</string>
    <string name="ACHIEVEMENT_LUCK_ID">CgkIroHwx8UJEAIQAw</string>
    <string name="ACHIEVEMENT_CASUAL_ID">CgkIroHwx8UJEAIQBA</string>
    <string name="ACHIEVEMENT_CENTURION_ID">CgkIroHwx8UJEAIQBQ</string>
    <string name="ACHIEVEMENT_DETAILEYE_ID">CgkIroHwx8UJEAIQBg</string>
    <string name="ACHIEVEMENT_TAPMASTER_ID">CgkIroHwx8UJEAIQCg</string>
    <string name="ACHIEVEMENT_GODLIKE_ID">CgkIroHwx8UJEAIQCw</string>
    <string name="ACHIEVEMENT_LONGTIMER_ID">CgkIroHwx8UJEAIQDQ</string>
    <string name="ACHIEVEMENT_COLORBLIND_ID">CgkIroHwx8UJEAIQDg</string>
    <string name="ACHIEVEMENT_IMPOSSIBLE_ID">CgkIroHwx8UJEAIQDw</string>
    <string name="title_activity_easy_game">EasyGameActivity</string>
    <string name="title_activity_hard_game">HardGameActivity</string>
    <string name="ludomotor_reward">Claim Reward</string>
    <string name="ludomotor_later">Remind me later</string>
    <string name="ludomotor_email">No problem! We\'ll send over an email with your reward</string>

</resources>
