<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="340dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tagline_text"
            android:layout_width="wrap_content"
            android:text="@string/tagline1"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tagline_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/red"
            android:text="@string/tagline2" />

        <TextView
            android:id="@+id/tagline_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline3" />

    </LinearLayout>

    <Button
        android:id="@+id/play_game_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/play_btn"
        android:onClick="playGame" />

</LinearLayout>