<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="match_parent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="20dp"
        android:id="@+id/progress_bar"
        android:progressDrawable="@drawable/timer_progress"
        android:max="100" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/points_label"
            android:text="@string/points_text"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/points_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toEndOf="@id/points_label"
            android:layout_toRightOf="@id/points_label"
            android:layout_centerVertical="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_button"
            android:text="@string/start_button_text"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/level_value"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/level_label"
            android:text="@string/level_text"
            android:layout_toStartOf="@id/level_value"
            android:layout_toLeftOf="@id/level_value"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_centerVertical="true" />


    </RelativeLayout>

    <Button
        android:id="@+id/top_button"
        android:layout_width="match_parent"
        android:layout_height="260dp" />

    <Button
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="260dp" />

</LinearLayout>
